--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     padding: 0px;
 }
 
-html,body {
+html, body {
     min-height: 100vh;
     background-color: darkgrey; 
     font-family: var(--fonte1);
@@ -31,16 +31,11 @@ header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--fonte2);
-    font-size: 10vw;
+    font-size: 10vw; 
 }
 
 header > p {
     padding-bottom: 50px;
-}
-
-a{
-    text-decoration: none;
-    color: white;
 }
 
 section {
@@ -49,19 +44,15 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte4);
-    font-size: 2.6vw;
-
 }
 
 section > p {
-    padding: 0.5em;
-   
+    padding: 0.5em;   
 }
 
 section.normal{
     background-color: white;
     color: black; 
-
 }
 
 section.imagem{
@@ -70,7 +61,6 @@ section.imagem{
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.5);    
     background-attachment: fixed;
     background-size: cover;
-    background-attachment: fixed;
     text-shadow: 1px 1px 1px black; 
 }
 
@@ -91,6 +81,16 @@ section#segunda{
     background-image: url(imagens/segunda.jpg);
 }
 
+@media screen and (min-width: 601px) {
+    section {
+      font-size: 30px;    
+  }
+} 
+  @media screen and (max-width: 600px) {
+    section {
+      font-size: 15px;
+    }
+}
 
 footer{
     background-color: black;
@@ -100,7 +100,10 @@ footer{
     font-weight: bolder;
 }
 
-
+a{
+    text-decoration: none;
+    color: white;
+}
 
 a:hover{
     color: gray; 
